# esp8266-wifi-serial

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: adapter.rs  error.rs  lib.rs  module.rs  network_session.rs  parser.rs  reader_part.rs  softap.rs  tests.rs  wifi_session.rs
tests/: commands.rs
tests/common/: mod.rs
