[package]
name = "esp8266-wifi-serial"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
no-std-net = "0.5"
nom = { version = "6.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
simple-clock = "0.1"
heapless = "0.7"
no-stdout = "0.1.0"

[dev-dependencies]
serialport = "4.0"
anyhow = "1.0"
assert_matches = "1"
once_cell = "1"

[features]
integration_tests = []
