[package]
name = "esp8266-wifi-serial"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"

[dependencies]
atoi = "0.4.0"
embedded-hal = "0.2"
heapless = "0.7"
nb = "1"
no-std-net = "0.5"
no-stdout = "0.1.0"
nom = { version = "6.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
simple-clock = "0.1"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
once_cell = "1"
serialport = "4.0"

[features]
integration_tests = []
