[package]
name = "esp8266-wifi-serial"
version = "0.1.0"
authors = ["Aleksei Sidorov <gorthauer87@yandex.ru>"]
edition = "2018"

description = "A driver to work with the esp8266 module over the serial port."
documentation = "https://docs.rs/esp8266-wifi-serial/"
repository = "https://github.com/alekseysidorov/esp8266-wifi-serial"
keywords = ["no_std", "esp8266", "wifi", "driver", "network"]
categories = ["no-std", "embedded", "network-programming"]

[dependencies]
atoi = "0.4.0"
embedded-hal = "0.2"
heapless = "0.7"
nb = "1"
no-std-net = "0.5"
no-stdout = "0.1.0"
nom = { version = "6.1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
simple-clock = "0.1"

[dev-dependencies]
anyhow = "1.0"
assert_matches = "1"
once_cell = "1"
serialport = "4.0"

[features]
integration_tests = []
